# Trading-engine

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
frontend/: Dockerfile  index.html  nginx.conf  package.json  tailwind.config.js
frontend/src/: App.jsx  index.css
tests/: test_live_executor.py  test_oi_history.py  test_settings_store.py  test_signals.py  test_sizing.py  test_universe.py
trading_system/: __init__.py
trading_system/app/: config.py  main.py  runtime.py  user_settings.py
trading_system/backtest/: __init__.py  broker.py  metrics.py
trading_system/dashboard/: streamlit_app.py
trading_system/data/: __init__.py  account_state.py  hyperliquid_info.py  networks.py  sentiment.py  trade_stream.py  universe.py
trading_system/execution/: __init__.py  adaptive_limit.py  hyperliquid_client.py  live_executor.py  order_manager.py
trading_system/features/: funding.py  oi_history.py  orderflow.py  trend.py
trading_system/notifications/: telegram.py
trading_system/risk/: sizing.py
trading_system/signals/: engine.py  models.py  scoring.py
trading_system/storage/: __init__.py  migrate.py
trading_system/storage/migrations/: 001_init.sql
