[project]
name = "hyperliquid-funding-arb"
version = "0.1.0"
description = "Async Hyperliquid perpetual futures engine for funding and microstructure signals."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "redis>=5.0.0",
    "asyncpg>=0.29.0",
    "httpx>=0.27.0",
    "websockets>=12.0",
    "pandas>=2.2.0",
    "numpy>=2.0.0",
    "hyperliquid-python-sdk>=0.15.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.6.0",
]

[build-system]
requires = ["setuptools>=72.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["trading_system*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
